feat: Data leakage fix + DVC versioning + Analysis docs (v2.0)
CRITICAL FIXES:
- Fixed data leakage in cnt_vs_historical (now uses cnt_transformed_lag_1h)
- Updated notebook.ipynb Cell 66 and 02_modeling.ipynb Cell 12
- Feature importance validated: 49.9% -> 12.7% (successful correction)

DVC UPDATES:
- Updated bike_sharing_clean.csv (interim data)
- Updated normalized train/val/test datasets
- Updated scaler.pkl
- All datasets regenerated with corrected feature

DOCUMENTATION:
- AUDITORIA_URGENTE_DATA_LEAKAGE.md: Detection and analysis
- CORRECCION_FINAL_DATA_LEAKAGE.md: Solution implemented (Option A)
- OPINION_EXPERTA_RESULTADOS_FINALES.md: Post-correction analysis
- 19 markdown documentation files created

RESULTS ANALYSIS:
- XGBoost: Val RMSE 69.63 (best) but severe overfitting (Train R2 0.98)
- Random Forest: Val RMSE 104.92 (stable) but underfitting (Train R2 0.72)
- CV RMSE ~132 suggests Val may be optimistic
- Recommendation: Re-train XGBoost with more conservative params

FILES MODIFIED:
- notebooks/notebook.ipynb (feature engineering corrected)
- notebooks/02_modeling.ipynb (modeling with clean features)
- .gitignore (added mlruns/ and large model files)
- requirements.txt
- All .dvc files updated

NOTE: mlruns/ excluded from Git (too large), tracked locally only

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,16 @@ __pycache__/
 *.out
 *.app
 
+
+# MLflow tracking and models (too large for Git)
+mlruns/
+
+# Exclude model files (tracked with DVC)
+/models/*
+!/models/
+!/models/*.dvc
+!/models/*.csv
+
 # Distribution / packaging
 .Python
 env/
