--- a/.gitignore
+++ b/.gitignore
@@ -120,7 +120,87 @@ bin/
 
 # virtual environment
 /venv
+/.venv
 
 # Pipfiles
 Pipfile
 Pipfile.lock
+
+# =============================================
+# MLOps specific ignores
+# =============================================
+
+# MLflow tracking and artifacts
+/mlruns/
+/mlartifacts/
+/models/*/mlruns/
+/models/*/mlartifacts/
+*.mlflow
+
+# Trained models and artifacts
+/models/*.pkl
+/models/*.joblib
+/models/*.h5
+/models/*.model
+/models/*.weights
+/models/*/mlflow_export/
+/models/*/*.pkl
+/models/*/*.joblib
+/models/*/*.h5
+*.pickle
+
+# Jupyter notebook outputs and checkpoints
+.ipynb_checkpoints/
+*/.ipynb_checkpoints/
+
+# Data files (handled by DVC)
+*.csv
+*.parquet
+*.xlsx
+*.json
+*.hdf5
+*.h5
+
+# AWS credentials and config
+.aws/
+aws-credentials
+*.pem
+*.key
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.staging
+
+# OS specific
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDEs
+.vscode/settings.json
+.vscode/launch.json
+*.swp
+*.swo
+*~
+
+# Temporary files
+*.tmp
+*.temp
+/tmp/
+/temp/
+
+# Logs
+*.log
+logs/
+*.out
+
+# Cache
+.cache/
+.pytest_cache/
+.mypy_cache/
