feat: Enhance project structure and documentation
- Updated .gitignore to include .vscode directory.
- Added API_EXAMPLES.md to provide detailed examples for the /predict endpoint, including required features and expected responses.
- Updated requirements.txt to include Redis for stateful history management.
- Introduced service.py for FastAPI inference service, enabling predictions for single and batch records.
- Added verify_feature_ranges.py for improved feature range validation with outlier detection.
- Updated config.yaml to include base_year and context_columns for feature engineering.
- Removed outdated FEATURE_ENGINEERING_OVERVIEW.md documentation.
- Added scripts for Redis bootstrapping and prediction validation.
- Enhanced data cleaning and preprocessing to ensure data integrity and handle NaNs effectively.
- Implemented RedisManager for managing historical data and predictions.

These changes improve the overall functionality, maintainability, and usability of the project.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -35,8 +35,13 @@ data:
 
 # Feature engineering configuration
 features:
+  base_year: 2011
   # Lag features (hours)
   lag_features: [1, 24, 48, 72, 168]
+
+  # Columns that must remain in feature matrices to preserve temporal context
+  context_columns:
+    - "dteday"
   
   # Rolling window features (hours)
   rolling_windows: [3, 24, 72]
