--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-# ============================================================================
+# =========================================================================
 # REQUIREMENTS - MLOps Bike Sharing Demand Prediction
-# ============================================================================
+# =========================================================================
 # Actualizado: 2025-10-12
 # Compatible con Python 3.9+
 
@@ -42,6 +42,7 @@ joblib  # Para guardar scaler y modelos
 python-dateutil
 pytz
 pyyaml  # Para cargar configuración YAML
+redis  # Cliente Redis para historial stateful
 
 # Optional: Advanced Features (descomentar si necesitas)
 # shap  # Para explicabilidad (SHAP values)
